#20 - Add import functionality
- Add openApi Documentation for Import functionality
- Optimize Imports and remove style violations
- Add endpoint to convert stagedElements to drafts
- Add endpoint to remove imports
- Make imports accessible and editable by users who created them and by namespace admins
